Working version of cmake build with CUDA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,10 +66,13 @@ ENDIF(USE_HD5)
 
 # CUDA
 FIND_PACKAGE(CUDA REQUIRED)
-IF (CUDA_FOUND)
-    ADD_DEFINITIONS(-DUSE_GPU)
-    SET(CULIBS ${CUDA_LIBRARIES})
+IF(CUDA_FOUND)
+    SET(CUDA_SEPARABLE_COMPILATION TRUE)
+    ADD_DEFINITIONS(-DUSE_GPU -DFF_ANA_GPU -DFF_NUM_GPU -DKERNEL2)
+    ADD_SUBDIRECTORY(src/ff/gpu)
+    ADD_SUBDIRECTORY(src/sf/gpu)
 ENDIF (CUDA_FOUND)
+
 
 #OPENMP
 FIND_PACKAGE(OpenMP)
@@ -100,11 +103,11 @@ INCLUDE_DIRECTORIES(include)
 
 IF (CUDA_FOUND)
     CUDA_ADD_EXECUTABLE(hipgisaxs ${hipgisaxs_SOURCE})
-    TARGET_LINK_LIBRARIES(hipgisaxs ${CULIBS})
+    TARGET_LINK_LIBRARIES(hipgisaxs ffgpu sfgpu ${CULIBS})
 ELSE (CUDA_FOUND)
     ADD_EXECUTABLE(hipgisaxs ${hipgisaxs_SOURCE})
 ENDIF(CUDA_FOUND)
 
 ADD_SUBDIRECTORY(src)
-TARGET_LINK_LIBRARIES(hipgisaxs ${LIBS})
+TARGET_LINK_LIBRARIES(hipgisaxs ffcpu sfcpu ${LIBS})
 INSTALL(TARGETS hipgisaxs DESTINATION ${CMAKE_SOURCE_DIR}/bin)
