--- a/src/sf/gpu/CMakeLists.txt
+++ b/src/sf/gpu/CMakeLists.txt
@@ -1,6 +1,7 @@
 
-TARGET_SOURCES(
-    hipgisaxs
-    PRIVATE
+SET(sfgpu_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/sf_gpu.cu
 )
+
+CUDA_INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
+CUDA_ADD_LIBRARY(sfgpu ${sfgpu_SOURCES})
