--- a/src/sf/CMakeLists.txt
+++ b/src/sf/CMakeLists.txt
@@ -1,13 +1,7 @@
 
-TARGET_SOURCES(
-    hipgisaxs
-    PRIVATE
+SET(sfcpu_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/liquid.cpp
 	${CMAKE_CURRENT_LIST_DIR}/sf.cpp 
 )
 
-
-IF (CUDA_FOUND)
-    ADD_SUBDIRECTORY(gpu)
-    ADD_DEFINITIONS(-DSF_GPU)
-ENDIF(CUDA_FOUND)
+ADD_LIBRARY(sfcpu ${sfcpu_SOURCES})
