--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,13 +65,14 @@ IF (USE_HD5)
 ENDIF(USE_HD5)
 
 # CUDA
-FIND_PACKAGE(CUDA REQUIRED)
-IF(CUDA_FOUND)
+OPTION(USE_CUDA "Use nvidia GPUs for acceleration" TRUE)
+FIND_PACKAGE(CUDA)
+IF(USE_CUDA AND CUDA_FOUND)
     SET(CUDA_SEPARABLE_COMPILATION TRUE)
     ADD_DEFINITIONS(-DUSE_GPU -DFF_ANA_GPU -DFF_NUM_GPU -DKERNEL2)
     ADD_SUBDIRECTORY(src/ff/gpu)
     ADD_SUBDIRECTORY(src/sf/gpu)
-ENDIF (CUDA_FOUND)
+ENDIF (USE_CUDA AND CUDA_FOUND)
 
 
 #OPENMP
@@ -101,12 +102,12 @@ SET(hipgisaxs_SOURCE
 )
 INCLUDE_DIRECTORIES(include)
 
-IF (CUDA_FOUND)
+IF (USE_CUDA)
     CUDA_ADD_EXECUTABLE(hipgisaxs ${hipgisaxs_SOURCE})
     TARGET_LINK_LIBRARIES(hipgisaxs ffgpu sfgpu ${CULIBS})
-ELSE (CUDA_FOUND)
+ELSE (USE_CUDA)
     ADD_EXECUTABLE(hipgisaxs ${hipgisaxs_SOURCE})
-ENDIF(CUDA_FOUND)
+ENDIF(USE_CUDA)
 
 ADD_SUBDIRECTORY(src)
 TARGET_LINK_LIBRARIES(hipgisaxs ffcpu sfcpu ${LIBS})
