--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,12 @@ ENDIF()
 
 
 # custom modules
-LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
+#LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 # add c++11 for pre GCC 6. compilers
-IF (CMAKE_COMPILER_IS_GNUCC AND  NOT CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 6)
+#IF (CMAKE_COMPILER_IS_GNUCC AND  NOT CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 6)
 SET(CMAKE_CXX_FLAGS "-std=c++11")
-ENDIF()
+#ENDIF()
 
 # add option to do double precision
 OPTION(DOUBLE_PRECISION "Use double precision arithmatic" OFF)
@@ -39,12 +39,12 @@ IF (yaml-cpp_FOUND)
 ENDIF (yaml-cpp_FOUND)
 
 # FFTW Library
-FIND_LIBRARY(FFTW NAMES fftw3 "/usr/lib/x86_64-linux-gnu/")
-IF (FFTW)
-    SET(LIBS ${LIBS} ${FFTW})
-ELSE(FFTW)
-    MESSAGE(FATAL_ERROR  "FFTW3 not found")
-ENDIF(FFTW)
+#FIND_LIBRARY(FFTW NAMES fftw3 "/usr/lib/x86_64-linux-gnu/")
+#IF (FFTW)
+#    SET(LIBS ${LIBS} ${FFTW})
+#ELSE(FFTW)
+#    MESSAGE(FATAL_ERROR  "FFTW3 not found")
+#ENDIF(FFTW)
 
 # TIFF
 FIND_PACKAGE(TIFF)
@@ -65,7 +65,11 @@ IF (USE_HD5)
 ENDIF(USE_HD5)
 
 # CUDA
-OPTION(USE_CUDA "Use nvidia GPUs for acceleration" TRUE)
+IF (APPLE)
+	OPTION(USE_CUDA "Use nvidia GPUs for acceleration" FALSE)
+ELSE (APPLE)
+	OPTION(USE_CUDA "Use nvidia GPUs for acceleration" TRUE)
+ENDIF (APPLE)
 FIND_PACKAGE(CUDA)
 IF(USE_CUDA AND CUDA_FOUND)
     SET(CUDA_SEPARABLE_COMPILATION TRUE)
