--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,3 +116,16 @@ ENDIF(USE_CUDA)
 ADD_SUBDIRECTORY(src)
 TARGET_LINK_LIBRARIES(hipgisaxs ffcpu sfcpu ${LIBS})
 INSTALL(TARGETS hipgisaxs DESTINATION ${CMAKE_SOURCE_DIR}/bin)
+
+
+#INCLUDE(InstallRequiredSystemLibraries)
+#SET(CPACK_GENERATOR "TGZ")
+#SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "CAMERA/LBL")
+#SET(CPACK_PACKAGE_VENDOR "CAMERA/LBL")
+#SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+#SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
+#SET(CPACK_PACKAGE_VERSION "${HipGISAXS_VERSION_MAJOR}.${HipGISAXS_VERSION_MINOR}")
+#SET(CPACK_PACKAGE_VERSION_MAJOR "${HipGISAXS_VERSION_MAJOR}")
+#SET(CPACK_PACKAGE_VERSION_MINOR "${HipGISAXS_VERSION_MINOR}")
+#INSTALL(TARGETS hipgisaxs DESTINATION /usr/local/bin)
+#INCLUDE(CPack)
