--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,6 @@ IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
 ENDIF()
 
 
-# custom modules
-LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
-
 # add c++11 for pre GCC 6. compilers
 IF (CMAKE_COMPILER_IS_GNUCC AND  NOT CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 6)
 SET(CMAKE_CXX_FLAGS "-std=c++11")
@@ -34,8 +31,8 @@ ENDIF()
 # find CPP-YAML
 FIND_PACKAGE(yaml-cpp REQUIRED)
 IF (yaml-cpp_FOUND)
-    INCLUDE_DIRECTORIES(${yaml-cpp_INCLUDE_DIR})
-    SET(LIBS ${LIBS} ${yaml-cpp_LIBRARY})
+    INCLUDE_DIRECTORIES(${YAML_CPP_INCLUDE_DIR})
+    SET(LIBS ${LIBS} "-lyaml-cpp")
 ENDIF (yaml-cpp_FOUND)
 
 # FFTW Library
